--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
-    <nav class="breadcrumb" aria-label="breadcrumbs">
-      <ul>
-        <li><a href="#">Bulma</a></li>
-        <li><a href="#">Documentation</a></li>
-        <li><a href="#">Components</a></li>
-        <li class="is-active">
-          <a href="#" aria-current="page">Breadcrumb</a>
-        </li>
-      </ul>
-    </nav>
+    <image
+      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
+    >
+    </image>
   </body>
 </html>
