--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="app.css" />
   </head>
 
@@ -15,6 +14,7 @@
   <body>
     <image
       src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
+      class="center"
     >
     </image>
   </body>
