--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: maroon">
   <!-- IMPORT STUFF AND SET TITLE HERE-->
   <head>
     <title>Howdy Hydrate</title>
@@ -11,7 +11,7 @@
   </head>
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
-  <body style="background-color:maroon;">
+  <body>
   </div>
   <div class="dropdown is-active dd">
     <div class="dropdown-trigger" style = "position:fixed; left:0px; top:0px;">
