--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: maroon">
   <!-- IMPORT STUFF AND SET TITLE HERE-->
   <head>
     <title>Howdy Hydrate</title>
@@ -11,34 +11,43 @@
   </head>
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
-  <body style="background-color:maroon;">
-  </div>
-  <div class="dropdown is-active dd">
-    <div class="dropdown-trigger">
-      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
-        <span>Locations</span>
-        <span class="icon is-small">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </button>
-    </div>
-    <div class="dropdown-menu" id="dropdown-menu2" role="menu">
+  <body>
+    <div class="dropdown" style="position: fixed; left: 110px; top: 0px">
+      <button class="location-button">Locations</button>
       <div class="dropdown-content">
-          <a href="index.html" class="dropdown-item">
-            MSC Floor 1
-          </a>
-        <hr class="dropdown-divider">
-        <a href="index2.html" class="dropdown-item">
-          MSC Floor 2
-        </a>
+        <a href="index.html">MSC Floor 1</a>
+        <a href="index2.html">MSC Floor 2</a>
       </div>
     </div>
-  </div>
-    <div>
-      <image
-        src="https://cdn.discordapp.com/attachments/1150154889108922559/1150155038904307733/MSC_secondlevelmeetings-edited.png"
-        class="center"
-      >
-      </image>
+    <image
+      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150155038904307733/MSC_secondlevelmeetings-edited.png"
+      class="center2"
+    >
+    </image>
+    <div style="position: fixed; left: 400px; top: 400px">
+      <button class="button" href="#" onclick="show('popup')">
+        <image class="water" src="water.png"></image>
+      </button>
+      <!-- <image src="water.png"></image> -->
+      <!-- This is what will be included inside the popup -->
+      <div class="popup" id="popup">
+        <p>Water Fountain</p>
+        <p>This fountain is <b>4.3/5.0</b></p>
+        <a href="#" onclick="hide('popup')">Close</a>
+      </div>
+    </div>
   </body>
 </html>
+
+<script>
+  $ = function (id) {
+    return document.getElementById(id);
+  };
+
+  var show = function (id) {
+    $(id).style.display = "block";
+  };
+  var hide = function (id) {
+    $(id).style.display = "none";
+  };
+</script>
