--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         <a href="index2.html">MSC Floor 2</a>
       </div>
     </div>
+     <div>
     <image
       src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
       class="center1"
     >
     </image>
-    <div style="position: fixed; left: 600px; top: 375px">
+    <div style="position: fixed; left: 50%; top: 50%">
       <button
         class="button"
         id="img-container"
@@ -35,9 +36,10 @@
       </button>
       <!-- <image src="water.png"></image> -->
       <!-- This is what will be included inside the popup -->
+    </div>
       <div class="popup" id="popup">
         <p>Water Fountain</p>
-        <p>This fountain is <b>4.3/5.0</b></p>
+        <p>This fountain is <b>4.3<!-- fill with avgRating -->/5.0</b></p>
         <a href="#" onclick="hide('popup')">Close</a>
       </div>
     </div>
