added better css elements

--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
       class="center2"
     >
     </image>
-    <div style="position: fixed; left: 400px; top: 400px">
+    <div style="position: fixed; left: 60%; top: 30%">
       <button class="button" href="#" onclick="show('popup')">
         <image class="water" src="water.png"></image>
       </button>
@@ -32,7 +32,7 @@
       <!-- This is what will be included inside the popup -->
       <div class="popup" id="popup">
         <p>Water Fountain</p>
-        <p>This fountain is <b>4.3/5.0</b></p>
+        <p>This fountain is <b>2.5/5.0</b></p>
         <a href="#" onclick="hide('popup')">Close</a>
       </div>
     </div>
