5 FUNCTIONIG BUTTONS ON BOTH FLOORS HOLY CRAP!!!!

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <div class="popup" id="popup1">
         <a class="close" id="closePopup" href="#" onclick="hide('popup1')">&times;</a>
-        <h2>Water Fountain</h2>
+        <h2>Water Fountain 1</h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">4.3/5</label>
@@ -78,7 +78,7 @@
       </div>
       <div class="popup" id="popup2">
         <a class="close" id="closePopup" href="#" onclick="hide('popup2')">&times;</a>
-        <h2>Water Fountain</h2>
+        <h2>Water Fountain 2</h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">3.9/5</label>
@@ -91,7 +91,7 @@
       </div>
       <div class="popup" id="popup3">
         <a class="close" id="closePopup" href="#" onclick="hide('popup3')">&times;</a>
-        <h2>Water Fountain</h2>
+        <h2>Water Fountain 3</h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">2.7/5</label>
