--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
+  </image>
     <div class="dropdown" style="position: fixed; left: 110px; top: 0px">
       <button class="location-button">Locations</button>
       <div class="dropdown-content">
@@ -19,12 +20,19 @@
         <a href="index2.html">MSC Floor 2</a>
       </div>
     </div>
-     <div>
+
     <image
       src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
       class="center1"
     >
-    </image>
+    <div style="position: fixed; left: 0px; top: 45%">
+      <image class="logo1" src="HOWDYHYDRATE.png"></image>
+    </div>
+    <div style="position: fixed; left: 75%; top: 37%">
+      <image class="rev1" src="rev.png"></image>
+    </div>
+   
+
     <div style="position: fixed; left: 50%; top: 67%">
       <button
         class="button"
@@ -62,6 +70,9 @@
       <!-- This is what will be included inside the popup -->
     </div>
     <div>
+    <div>
+      
+    <div>     
       
       <div class="popup" id="popup1">
         <a class="close" id="closePopup" href="#" onclick="hide('popup1')">&times;</a>
