--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,19 @@
       class="center2"
     >
     </image>
+    <div style="position: fixed; left: 0px; top: 45%">
+      <image class="logo1" src="HOWDYHYDRATE.png"></image>
+    </div>
+    <image
+      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
+      class="center1"
+    >
+    <div style="position: fixed; left: 0px; top: 45%">
+      <image class="logo1" src="HOWDYHYDRATE.png"></image>
+    </div>
+    <div style="position: fixed; left: 75%; top: 37%">
+      <image class="rev1" src="rev.png"></image>
+    </div>
     <div style="position: fixed; left: 50%; top: 67%">
       <button
         class="button"
@@ -49,7 +62,7 @@
           </form>
       </div>
     </div>
-    <div style="position: fixed; left: 34%; top: 33%">
+    <div style="position: fixed; left: 51%; top: 20%">
       <button
         class="button"
         id="img-container"
