--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
-  </image>
-    <div class="dropdown" style="position: fixed; left: 110px; top: 0px">
+    <h1 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
+    <div class="dropdown" style="position: fixed; left: 110px; top: 80px">
       <button class="location-button">Locations</button>
       <div class="dropdown-content">
         <a href="index.html">MSC Floor 1</a>
@@ -22,7 +22,7 @@
     </div>
 
     <image
-      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
+      src="MSC_firstfloormeetings.png"
       class="center1"
     >
     <div style="position: fixed; left: 0px; top: 45%">
@@ -82,7 +82,7 @@
             <label for="rating">4.3/5</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
-            <label for="description">Description:</label>
+            <label for="description">Rate:</label>
             <textarea id="description" name="description" required></textarea>
             <button type="submit" id="submitButton">Submit</button>
           </form>
@@ -95,7 +95,7 @@
             <label for="rating">3.9/5</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
-            <label for="description">Description:</label>
+            <label for="description">Rate:</label>
             <textarea id="description" name="description" required></textarea>
             <button type="submit" id="submitButton">Submit</button>
           </form>
@@ -108,7 +108,7 @@
             <label for="rating">2.7/5</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
-            <label for="description">Description:</label>
+            <label for="description">Rate:</label>
             <textarea id="description" name="description" required></textarea>
             <button type="submit" id="submitButton">Submit</button>
           </form>
