--- a/index2.html
+++ b/index2.html
@@ -12,79 +12,45 @@
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
-    <div class="dropdown" style="position: fixed; left: 110px; top: 0px">
+    <h1 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
+    <div class="dropdown" style="position: fixed; left: 110px; top: 80px">
       <button class="location-button">Locations</button>
       <div class="dropdown-content">
         <a href="index.html">MSC Floor 1</a>
         <a href="index2.html">MSC Floor 2</a>
       </div>
     </div>
-    <image
-      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150155038904307733/MSC_secondlevelmeetings-edited.png"
-      class="center2"
-    >
-    </image>
-    <div style="position: fixed; left: 0px; top: 45%">
-      <image class="logo1" src="HOWDYHYDRATE.png"></image>
-    </div>
-    <image
-      src="https://cdn.discordapp.com/attachments/1150154889108922559/1150154992846643271/MSC_firstfloormeetings.png"
-      class="center1"
-    >
-    <div style="position: fixed; left: 0px; top: 45%">
-      <image class="logo1" src="HOWDYHYDRATE.png"></image>
-    </div>
-    <div style="position: fixed; left: 75%; top: 37%">
-      <image class="rev1" src="rev.png"></image>
-    </div>
-    <div style="position: fixed; left: 50%; top: 67%">
-      <button
-        class="button"
-        id="img-container"
-        href="#"
-        onclick="show('popup4')"
+    <div>
+      <image
+        src="MSC_secondlevelmeetings-edited.png"
+        class="center2"
       >
-        <image class="water" src="water.png"></image>
-      </button>
-      <!-- <image src="water.png"></image> -->
-      <!-- This is what will be included inside the popup -->
-      <div class="popup" id="popup4">
-        <a class="close" id="closePopup" href="#" onclick="hide('popup4')">&times;</a>
-        <h2>Water Fountain 4</h2>
-        <form id="ratingForm">
-            <label for="rating">Rating:</label>
-            <label for="rating">2.3/5</label>
-            <br><br>
-            <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
-            <label for="description">Description:</label>
-            <textarea id="description" name="description" required></textarea>
-            <button type="submit" id="submitButton">Submit</button>
-          </form>
+      </image>
+      <div style="position: fixed; left: 60%; top: 30%">
+        <button
+          class="button"
+          id="button4"
+          href="#"
+          onclick="show('popup4')"
+        >
+          <image class="water" src="water.png"></image>
+        </button>
+        <!-- <image src="water.png"></image> -->
+        <!-- This is what will be included inside the popup -->
       </div>
-    </div>
-    <div style="position: fixed; left: 51%; top: 20%">
-      <button
-        class="button"
-        id="img-container"
-        href="#"
-        onclick="show('popup5')"
-      >
-        <image class="water" src="water.png"></image>
-      </button>
-      <!-- <image src="water.png"></image> -->
-      <!-- This is what will be included inside the popup -->
-      <div class="popup" id="popup5">
-        <a class="close" id="closePopup" href="#" onclick="hide('popup5')">&times;</a>
-        <h2>Water Fountain 5</h2>
-        <form id="ratingForm">
-            <label for="rating">Rating:</label>
-            <label for="rating">3.3/5</label>
-            <br><br>
-            <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
-            <label for="description">Description:</label>
-            <textarea id="description" name="description" required></textarea>
-            <button type="submit" id="submitButton">Submit</button>
-          </form>
+      <div class="popup" id="popup4">
+        <div class="popup-content">
+          <a class="close" id="closePopup" href="#" onclick="hide('popup4')">&times;</a>
+          <h2>Water Fountain</h2>
+          <form id="ratingForm">
+              <label for="rating">Rating:</label>
+              <label for="rating">1.1/5</label>
+              <br><br>
+              <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
+              <label for="description">Rate:</label>
+              <textarea id="description" name="description" required></textarea>
+              <button type="submit" id="submitButton">Submit</button>
+            </form>
       </div>
     </div>
   </body>
@@ -102,3 +68,5 @@
     $(id).style.display = "none";
   };
 </script>
+
+
