--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
+    <div class="d-flex flex-column justify-content-center w-100 h-100"></div>
+
+
     <h1 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
     <div class="dropdown" style="position: fixed; left: 110px; top: 80px">
       <button class="location-button">Locations</button>
