added locations and location titles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <div class="dropdown-content">
         <a href="index.html">MSC Floor 1</a>
         <a href="index2.html">MSC Floor 2</a>
+        <a href="#">ZACH Floor 1</a>
+        <a href="#">Main Rec</a>
+        <a href="#">Southside Rec</a>
       </div>
     </div>
 
@@ -36,7 +39,7 @@
     </div>
    
 
-    <div style="position: fixed; left: 50%; top: 67%">
+    <div style="position: fixed; left: 50%; top: 60%">
       <button
         class="button"
         id="img-container"
@@ -60,7 +63,7 @@
       <!-- <image src="water.png"></image> -->
       <!-- This is what will be included inside the popup -->
     </div>
-    <div style="position: fixed; left: 31%; top: 65%">
+    <div style="position: fixed; left: 33%; top: 62%">
       <button
         class="button"
         id="button3"
@@ -79,7 +82,7 @@
       
       <div class="popup" id="popup1">
         <a class="close" id="closePopup" href="#" onclick="hide('popup1')">&times;</a>
-        <h2>Water Fountain 1</h2>
+        <h2><b>Water Fountain 1</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">4.3/5</label>
@@ -92,7 +95,7 @@
       </div>
       <div class="popup" id="popup2">
         <a class="close" id="closePopup" href="#" onclick="hide('popup2')">&times;</a>
-        <h2>Water Fountain 2</h2>
+        <h2><b>Water Fountain 2</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">3.9/5</label>
@@ -105,7 +108,7 @@
       </div>
       <div class="popup" id="popup3">
         <a class="close" id="closePopup" href="#" onclick="hide('popup3')">&times;</a>
-        <h2>Water Fountain 3</h2>
+        <h2><b>Water Fountain 3</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
             <label for="rating">2.7/5</label>
@@ -117,6 +120,7 @@
           </form>
       </div>
     </div>
+    <h3 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 50px;">MSC Floor 1</h3>
   </body>
 </html>
 
