--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,9 @@
     <div class="dropdown-content">
       <a href="index.html">MSC Floor 1</a>
       <a href="index2.html">MSC Floor 2</a>
+      <a href="#">ZACH Floor 1</a>
+     <a href="#">Main Rec</a>
+     <a href="#">Southside Rec</a>
     </div>
   </div>
   <image
@@ -44,7 +47,7 @@
     <!-- This is what will be included inside the popup -->
     <div class="popup" id="popup4">
       <a class="close" id="closePopup" href="#" onclick="hide('popup4')">&times;</a>
-      <h2>Water Fountain 4</h2>
+      <h2><b>Water Fountain 4</b></h2>
       <form id="ratingForm">
           <label for="rating">Rating:</label>
           <label for="rating">2.3/5</label>
@@ -69,7 +72,7 @@
     <!-- This is what will be included inside the popup -->
     <div class="popup" id="popup5">
       <a class="close" id="closePopup" href="#" onclick="hide('popup5')">&times;</a>
-      <h2>Water Fountain 5</h2>
+      <h2><b>Water Fountain 5</b></h2>
       <form id="ratingForm">
           <label for="rating">Rating:</label>
           <label for="rating">3.3/5</label>
@@ -81,6 +84,7 @@
         </form>
     </div>
   </div>
+  <h3 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 50px;">MSC Floor 2</h3>
 </body>
 </html>
 
