--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="app.css" />
+    <link href="https://fonts.cdnfonts.com/css/north-face" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/hip-horay" rel="stylesheet">
   </head>
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
     <div class="d-flex flex-column justify-content-center w-100 h-100"></div>
 
-    <h1 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
+    <h1 style="color:white; font-family: 'North Face', sans-serif; font-size: 400%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
     <div class="dropdown" style="position: fixed; left: 110px; top: 80px">
       <button class="location-button">Locations</button>
       <div class="dropdown-content">
@@ -141,7 +143,7 @@
           </form>
       </div>
     </div>
-    <h3 style="color:white; font-family: serif; font-size: 300%; position: fixed; top: 80%; left: 43%;">MSC Floor 1</h3>
+    <h3 style="color:white; font-family: 'Hip Horay', sans-serif; font-size: 300%; position: fixed; top: 80%; left: 43%;">MSC Floor 1</h3>
     <script>
       const element1 = document.getElementById("submitButton1");
       element1.addEventListener("click", changeRating1);
