--- a/index2.html
+++ b/index2.html
@@ -8,11 +8,14 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="app.css" />
+    <link href="https://fonts.cdnfonts.com/css/north-face" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/hip-horay" rel="stylesheet">
+                
   </head>
 
   <!-- ANYTHING HERE SHOWS UP ON THE WEBSITE -->
   <body>
-    <h1 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
+    <h1 style="color:white; font-family: 'North Face', sans-serif; font-size: 400%; position: relative; top: 30px;">HOWDY HYDRATE</h1>
     <div class="dropdown" style="position: fixed; left: 110px; top: 80px">
     <button class="location-button">Locations</button>
     <div class="dropdown-content">
@@ -84,7 +87,7 @@
         </form>
     </div>
   </div>
-  <h3 style="color:white; font-family: serif; font-size: 300%; position: relative; top: 50px;">MSC Floor 2</h3>
+  <h3 style="color:white; font-family: 'Hip Horay', sans-serif; font-size: 300%; position: relative; top: 50px;">MSC Floor 2</h3>
   <script>
     const element5 = document.getElementById("submitButton5");
     element5.addEventListener("click", changeRating5);
