created red text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2><b>Water Fountain 1</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
-            <label for="rating" id="displayed-rating1">Unrated</label>
+            <label for="rating" id="displayed-rating1" style="color: red">Unrated</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
             <label for="description">Rate:</label>
@@ -108,7 +108,7 @@
         <h2><b>Water Fountain 2</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
-            <label for="rating" id="displayed-rating2">Unrated</label>
+            <label for="rating" id="displayed-rating2" style="color: red">Unrated</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
             <label for="description">Rate:</label>
@@ -121,7 +121,7 @@
         <h2><b>Water Fountain 3</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
-            <label for="rating" id="displayed-rating3">Unrated</label>
+            <label for="rating" id="displayed-rating3" style="color: red">Unrated</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
             <label for="description">Rate:</label>
@@ -134,7 +134,7 @@
         <h2><b>Water Fountain 4</b></h2>
         <form id="ratingForm">
             <label for="rating">Rating:</label>
-            <label for="rating" id="displayed-rating4">Unrated</label>
+            <label for="rating" id="displayed-rating4" style="color: red">Unrated</label>
             <br><br>
             <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
             <label for="description">Rate:</label>
