--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
       <h2><b>Water Fountain 5</b></h2>
       <form id="ratingForm">
           <label for="rating">Rating:</label>
-          <label for="rating" id="displayed-rating5">Unrated</label>
+          <label for="rating" id="displayed-rating5" style="color: red">Unrated</label>
           <br><br>
           <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
           <label for="description">Description:</label>
@@ -78,7 +78,7 @@
       <h2><b>Water Fountain 6</b></h2>
       <form id="ratingForm">
           <label for="rating">Rating:</label>
-          <label for="rating" id="displayed-rating6">Unrated</label>
+          <label for="rating" id="displayed-rating6" style="color: red">Unrated</label>
           <br><br>
           <!-- <input type="number" id="rating" name="rating" min="1" max="5" required><br><br> -->
           <label for="description">Description:</label>
